# mirroring

./: .Dockerfile.swp  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
.github/: .pre-commit-config-only-hooks.yaml
.github/workflows/: ci-test.yaml
app/: db_init.sh  main.py  total_db_init.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: dashboard.py  detail.py  fdc.py  setting_client.py  test.py  trend.py
app/api/crud/: dashboard.py  detail.py  interface.py  setting_client.py  trend.py  util.py
app/api/format/: dashboard.py  detail.py  setting_client.py  trend.py
app/api/schemas/: detail.py  trend.py
app/core/: config.py  dev.env  logger.py  prod.env
app/db/: table.py
app/db/fdc/: database.py  model.py
app/db/feature/: database.py  model.py
app/db/metadata/: database.py  model.py
app/db/plc/: database.py  model.py
app/db/plc/crud/: load.py
app/db/service/: database.py  model.py
app/db/service/not_lami/: model.py
app/lami_templates/: motor11_uvw.npy  motor15_uvw.npy  motor1_uvw.npy  motor2_uvw.npy  motor5_uvw.npy  motor6_uvw.npy
app/schemas/: anomaly.py  dashboard.py  detail.py  diagnosis.py  load.py  model.py  operating.py  setting.py
app/util/: exception.py  func.py  minio.py  utils.py
app/yaml/lami/: Config-13.yml  Equipment-13.yml  Equipment-14.yml  Equipment-15.yml  ExternalBearing-14.yml  ExternalBearing-15.yml  Line-13.yml  Line-14.yml  Line-15.yml  MemoryMapping-14.yml  MemoryMapping-15.yml  Motor-13.yml  Motor-14.yml  Motor-15.yml  MotorBearing-13.yml  MotorBearing-15.yml  PLCLog-13.yml  PLCLog-14.yml  PLCLog-15.yml  PLCModel-13.yml  PLCModel-15.yml  TensionBearing-14.yml  TensionBearing-15.yml  Trigger-14.yml  UniformSpeedExternalFeature-14.yml  UniformSpeedExternalFeature-15.yml  UniformSpeedTensionFeature-14.yml  UniformSpeedTensionFeature-15.yml  UniformSpeedThreshold-13.yml  UniformSpeedThreshold-15.yml  Variable-13.yml  Variable-15.yml  VariableSpeedPhase3Feature-13.yml  VariableSpeedPhase3Feature-15.yml  VariableSpeedThreshold-13.yml  VariableSpeedThreshold-15.yml
app/yaml/pkg/: Equipment.yml  Line.yml  MemoryMapping.yml  Motor.yml  PLCModel.yml
app/yaml/stk/: Equipment.yml  Line.yml  Motor.yml  PLCModel.yml
scripts/: changed.sh  format.sh  hooks.sh  lint.sh  target.sh  typecheck.sh
tests/: data_that_had_errors.pkl  test_row_to_dict.py
